# compressions

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: CLAUDE.md  settings.local.json
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
docs/superpowers/specs/: 2026-04-13-cicd-release-pipeline-design.md
scripts/: bump-version.mjs  check-versions.mjs  download-ffmpeg.ps1  download-ffmpeg.sh  download-gs.ps1  download-gs.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/benches/: compression_bench.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  types.rs  utils.rs  validate.rs
src-tauri/src/commands/: audio.rs  clipboard.rs  gif.rs  history.rs  image.rs  logs.rs  mod.rs  pdf.rs  presets.rs  probe.rs  queue.rs  scan.rs  thumbnail.rs  video.rs
src-tauri/src/compression/: image.rs  mod.rs  progress.rs
src-tauri/src/ffmpeg/: args.rs  mod.rs  probe.rs
src-tauri/src/history/: storage.rs
src-tauri/src/logging/: setup.rs
src-tauri/src/presets/: definitions.rs  mod.rs  storage.rs
src/components/controls/: AudioCompressionControls.tsx  AudioControls.tsx  CompressTab.tsx  GifControls.tsx  ImageControls.tsx  PdfControls.tsx  PresetSelector.tsx  ToolsTab.tsx  VideoControls.tsx
src/components/dropzone/: DropZone.tsx
src/components/file-list/: AudioWaveProgress.tsx  FileItem.tsx  FileList.tsx
src/components/history/: HistoryPanel.tsx
src/components/layout/: AppShell.tsx  ErrorBoundary.tsx  Header.tsx  Sidebar.tsx
src/components/logs/: LogViewer.tsx
src/components/output/: BatchProgressBar.tsx  OutputSettings.tsx  ResultsSummary.tsx
src/components/update/: UpdateToast.tsx
src/hooks/: useClipboardPaste.ts  useCompression.ts  useKeyboardShortcuts.ts  useUpdateCheck.ts
src/lib/: commands.ts  fileUtils.ts  scheduling.ts
src/stores/: compressionStore.ts  historyStore.ts  logStore.ts
src/styles/: globals.css
src/types/: compression.ts  presets.ts
tests/lib/: fileUtils.bench.ts  fileUtils.test.ts  scheduling.test.ts
tests/stores/: compressionStore.bench.ts  compressionStore.test.ts
