[package]
name = "compressions"
version = "0.1.0"
description = "A cross-platform video and image compression tool"
authors = []
edition = "2021"

[lib]
name = "compressions_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
mozjpeg = "0.10"
oxipng = "9"
webp = "0.3"
ravif = "0.11"
rgb = "0.8"
thiserror = "2"
regex = "1"
log = "0.4"
env_logger = "0.11"
dirs-next = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
