[package]
name = "compressions"
version = "0.1.0"
description = "A cross-platform video and image compression tool"
authors = []
edition = "2021"

[lib]
name = "compressions_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", features = ["jpeg", "png", "webp", "gif"] }
mozjpeg = "0.10"
oxipng = "9"
webp = "0.3"
ravif = "0.11"
rgb = "0.8"
gif = "0.13"
imagequant = "4"
img-parts = "0.4"
thiserror = "2"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
dirs-next = "2"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "compression_bench"
harness = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
